<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_formulario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.logonpf.aula02.FormularioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:text="@string/lbnome"
            style="@style/label"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/informe_seu_nome"
            android:id="@+id/etNome"
            android:padding="5dp"/>
        <TextView
            android:text="@string/label_curso"
            style="@style/label"
            android:padding="5dp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spCurso"
            android:entries="@array/cursos"
            android:prompt="@string/selecione"
            android:padding="5dp">
        </Spinner>

        <TextView
            android:text="@string/lb_periodo"
            style="@style/label"
            android:padding="5dp"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/rgPeriodo"
            android:padding="5dp">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lb_manha"
                android:layout_weight="0.5"
                android:id="@+id/rbManha"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lb_noite"
                android:layout_weight="0.5"
                android:id="@+id/rbNoite"/>
        </RadioGroup>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/bt_participar"
            android:id="@+id/btParticipar"
            android:padding="5dp"/>

    </LinearLayout>

</ScrollView>
